add properties
