# target/generated-sources/openapi/src/main/java/flapkap/vendingmachine/api/v1/resources/UserResource.java
@@ -1,130 +1,0 @@
-package flapkap.vendingmachine.api.v1.resources;
-
-import java.util.Objects;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
-import io.swagger.annotations.ApiModel;
-import io.swagger.annotations.ApiModelProperty;
-import org.openapitools.jackson.nullable.JsonNullable;
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-
-/**
- * user register
- */
-@ApiModel(description = "user register")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-04-23T03:50:34.703457211+02:00[Africa/Cairo]")
-public class UserResource   {
-  @JsonProperty("userName")
-  private String userName;
-
-  @JsonProperty("password")
-  private String password;
-
-  @JsonProperty("role")
-  private Integer role;
-
-  public UserResource userName(String userName) {
-    this.userName = userName;
-    return this;
-  }
-
-  /**
-   * Get userName
-   * @return userName
-  */
-  @ApiModelProperty(value = "")
-
-
-  public String getUserName() {
-    return userName;
-  }
-
-  public void setUserName(String userName) {
-    this.userName = userName;
-  }
-
-  public UserResource password(String password) {
-    this.password = password;
-    return this;
-  }
-
-  /**
-   * Get password
-   * @return password
-  */
-  @ApiModelProperty(value = "")
-
-
-  public String getPassword() {
-    return password;
-  }
-
-  public void setPassword(String password) {
-    this.password = password;
-  }
-
-  public UserResource role(Integer role) {
-    this.role = role;
-    return this;
-  }
-
-  /**
-   * Get role
-   * @return role
-  */
-  @ApiModelProperty(value = "")
-
-
-  public Integer getRole() {
-    return role;
-  }
-
-  public void setRole(Integer role) {
-    this.role = role;
-  }
-
-
-  @Override
-  public boolean equals(Object o) {
-    if (this == o) {
-      return true;
-    }
-    if (o == null || getClass() != o.getClass()) {
-      return false;
-    }
-    UserResource user = (UserResource) o;
-    return Objects.equals(this.userName, user.userName) &&
-        Objects.equals(this.password, user.password) &&
-        Objects.equals(this.role, user.role);
-  }
-
-  @Override
-  public int hashCode() {
-    return Objects.hash(userName, password, role);
-  }
-
-  @Override
-  public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class UserResource {\n");
-    
-    sb.append("    userName: ").append(toIndentedString(userName)).append("\n");
-    sb.append("    password: ").append(toIndentedString(password)).append("\n");
-    sb.append("    role: ").append(toIndentedString(role)).append("\n");
-    sb.append("}");
-    return sb.toString();
-  }
-
-  /**
-   * Convert the given object to string with each line indented by 4 spaces
-   * (except the first line).
-   */
-  private String toIndentedString(Object o) {
-    if (o == null) {
-      return "null";
-    }
-    return o.toString().replace("\n", "\n    ");
-  }
-}
-
