# target/generated-sources/openapi/src/main/java/flapkap/vendingmachine/api/v1/resources/UserResponseResource.java
@@ -1,132 +1,0 @@
-package flapkap.vendingmachine.api.v1.resources;
-
-import java.util.Objects;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
-import io.swagger.annotations.ApiModel;
-import io.swagger.annotations.ApiModelProperty;
-import java.math.BigDecimal;
-import org.openapitools.jackson.nullable.JsonNullable;
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-
-/**
- * user register response
- */
-@ApiModel(description = "user register response")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-04-23T03:50:34.703457211+02:00[Africa/Cairo]")
-public class UserResponseResource   {
-  @JsonProperty("userName")
-  private String userName;
-
-  @JsonProperty("role")
-  private String role;
-
-  @JsonProperty("deposit")
-  private BigDecimal deposit;
-
-  public UserResponseResource userName(String userName) {
-    this.userName = userName;
-    return this;
-  }
-
-  /**
-   * Get userName
-   * @return userName
-  */
-  @ApiModelProperty(value = "")
-
-
-  public String getUserName() {
-    return userName;
-  }
-
-  public void setUserName(String userName) {
-    this.userName = userName;
-  }
-
-  public UserResponseResource role(String role) {
-    this.role = role;
-    return this;
-  }
-
-  /**
-   * Get role
-   * @return role
-  */
-  @ApiModelProperty(value = "")
-
-
-  public String getRole() {
-    return role;
-  }
-
-  public void setRole(String role) {
-    this.role = role;
-  }
-
-  public UserResponseResource deposit(BigDecimal deposit) {
-    this.deposit = deposit;
-    return this;
-  }
-
-  /**
-   * Get deposit
-   * @return deposit
-  */
-  @ApiModelProperty(value = "")
-
-  @Valid
-
-  public BigDecimal getDeposit() {
-    return deposit;
-  }
-
-  public void setDeposit(BigDecimal deposit) {
-    this.deposit = deposit;
-  }
-
-
-  @Override
-  public boolean equals(Object o) {
-    if (this == o) {
-      return true;
-    }
-    if (o == null || getClass() != o.getClass()) {
-      return false;
-    }
-    UserResponseResource userResponse = (UserResponseResource) o;
-    return Objects.equals(this.userName, userResponse.userName) &&
-        Objects.equals(this.role, userResponse.role) &&
-        Objects.equals(this.deposit, userResponse.deposit);
-  }
-
-  @Override
-  public int hashCode() {
-    return Objects.hash(userName, role, deposit);
-  }
-
-  @Override
-  public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class UserResponseResource {\n");
-    
-    sb.append("    userName: ").append(toIndentedString(userName)).append("\n");
-    sb.append("    role: ").append(toIndentedString(role)).append("\n");
-    sb.append("    deposit: ").append(toIndentedString(deposit)).append("\n");
-    sb.append("}");
-    return sb.toString();
-  }
-
-  /**
-   * Convert the given object to string with each line indented by 4 spaces
-   * (except the first line).
-   */
-  private String toIndentedString(Object o) {
-    if (o == null) {
-      return "null";
-    }
-    return o.toString().replace("\n", "\n    ");
-  }
-}
-
